--- a/blogin/index.html
+++ b/blogin/index.html
@@ -33,10 +33,10 @@
                         <a href="index.html" class="nav-link">Dashboard</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a href="post.html" class="nav-link">post</a>
+                        <a href="posts.html" class="nav-link">post</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a href="category.html" class="nav-link">Category</a>
+                        <a href="categories.html" class="nav-link">Category</a>
                     </li>
                     <li class="nav-item px-2">
                         <a href="users.html" class="nav-link">Users</a>
@@ -242,6 +242,9 @@
             <div class="row">
                 <div class="col-9">
                     <div class="card">
+                        <div class="card-header">
+                            <h3>Latest post</h3>
+                        </div>
                         <table class="table table-striped mb-0 table-borderless">
                             <thead class="thead-dark">
                                 <tr>
@@ -345,7 +348,7 @@
                             <h4 class="display-4">
                                 <i class="fas fa-pencil-alt"></i>6
                             </h4>
-                            <a href="post.html" class="btn btn-outline-light btn-sm">View</a>
+                            <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
                         </div>
                     </div>
                     <div class="card text-center bg-warning text-white mb-3">
