--- a/blogin/posts.html
+++ b/blogin/posts.html
@@ -92,7 +92,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search placeholder">
                         <div class="input-group-append">
-                            <button class="btn btn-primary">Search</button>
+                            <button class="btn btn-primary">Searcsh</button>
                         </div>
                     </div>
 
