category and user page added

--- a/blogin/posts.html
+++ b/blogin/posts.html
@@ -36,7 +36,7 @@
                         <a href="posts.html" class="nav-link">post</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a href="category.html" class="nav-link">Category</a>
+                        <a href="categories.html" class="nav-link">Category</a>
                     </li>
                     <li class="nav-item px-2">
                         <a href="users.html" class="nav-link">Users</a>
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1>
-                        <i class="fas fa-cog"></i>
+                        <i class="fas fas fa-pencil-alt"></i>
                         Posts
                     </h1>
                 </div>
@@ -92,7 +92,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search placeholder">
                         <div class="input-group-append">
-                            <button class="btn btn-primary">Searcsh</button>
+                            <button class="btn btn-primary">Search</button>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                 <div class="col">
                     <div class="card  ">
                         <div class="card-header">
-                            <h3>Latest post</h3>
+                            <h3>Post</h3>
                         </div>
                         <table class="table table-striped mb-0 table-borderless">
                             <thead class="thead-dark">
