--- a/blogin/index.html
+++ b/blogin/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Bootstrap project
+        Blogin
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -53,7 +53,7 @@
                             <a href="profile.html" class="dropdown-item">Profile
                                 <i class="fas fa-user-circle"></i>
                             </a>
-                            <a href="profile.html" class="dropdown-item">Setting
+                            <a href="settings.html" class="dropdown-item">Setting
                                 <i class="fas fa-cog"></i>
                             </a>
                         </div>
@@ -262,7 +262,7 @@
                                     <td>Desctiprion</td>
                                     <td>1st jan 2021</td>
                                     <td>
-                                        <a href="#" class="btn btn-secondary">
+                                        <a href="edit.html" class="btn btn-secondary">
                                             <i class="fas fa-edit"></i>Edit
                                         </a>
                                         <a href="#" class="btn btn-danger">
@@ -339,7 +339,7 @@
                             <h4 class="display-4">
                                 <i class="fas fa-folder"></i>8
                             </h4>
-                            <a href="category.html" class="btn btn-outline-light btn-sm">View</a>
+                            <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
                         </div>
                     </div>
                     <div class="card text-center bg-primary text-white mb-3">
