--- a/blogin/users.html
+++ b/blogin/users.html
@@ -53,7 +53,7 @@
                             <a href="profile.html" class="dropdown-item">Profile
                                 <i class="fas fa-user-circle"></i>
                             </a>
-                            <a href="profile.html" class="dropdown-item">Setting
+                            <a href="settings.html" class="dropdown-item">Setting
                                 <i class="fas fa-cog"></i>
                             </a>
                         </div>
